test/Fail/IUnivNoHComp.err
IUnivNoHComp.agda:4.12-21: error: [UnequalTypes]
The types
  IUniv
and
  Set _ℓ_3
are not equal
when checking that the solution J of metavariable _A_4 has the
expected type Set _ℓ_3
